--- a/vue-admin-template/package.json
+++ b/vue-admin-template/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "0.18.1",
+    "codemirror": "^5.57.0",
     "core-js": "3.6.5",
     "echarts": "^4.8.0",
     "element-china-area-data": "^5.0.1",
@@ -22,6 +23,7 @@
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "number-precision": "^1.5.0",
     "path-to-regexp": "2.4.0",
     "tui-editor": "^1.4.10",
     "vue": "2.6.10",
